Fix CSS to be more "Pretty" on small devices
This will allow the scrolling to be 100% allowable on smaller devices, as well as hiding the background grunge image to be more...better

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -48,9 +48,11 @@ html, body {
   .lightbox {
 	position: static;
 	padding-top: 60px;
+	background: none;
   }
   body {
-	  background: rgba(101, 101, 101, 0.7); margin: auto; padding: 12px;
+	  background: rgba(10, 10, 10, 0.8); margin: auto; padding: 12px;
+	  background-image: none !important;
   }
 }
 
